@@ -245,4 +245,53 @@ apr_status_t apu_ssl_raw_error(apr_ssl_socket_t *sock)
     return APR_SUCCESS;
 }
 
+apr_status_t apr_evp_crypt_cleanup(apr_evp_crypt_t *e)
+{
+    return APR_ENOTIMPL;
+}
+
+apr_status_t apr_evp_factory_cleanup(apr_evp_factory_t *f)
+{
+    return APR_ENOTIMPL;
+}
+
+apr_status_t apr_evp_factory_create(apr_evp_factory_t **newFactory,
+                                    const char *privateKeyFn, 
+                                    const char *certFn, 
+                                    const char *cipherName,
+                                    const char *passphrase,
+                                    const char *engine,
+                                    const char *digest,
+                                    apr_evp_factory_type_e purpose,
+                                    apr_pool_t *pool)
+{
+    return APR_ENOTIMPL;
+}
+
+apr_status_t apr_status_t apr_evp_crypt_init(apr_evp_factory_t *f,
+                                             apr_evp_crypt_t **e,
+                                             apr_evp_crypt_type_e type,
+                                             apr_evp_crypt_key_e key,
+                                             apr_pool_t *p)
+{
+    return APR_ENOTIMPL;
+}
+
+apr_status_t apr_evp_crypt(apr_evp_crypt_t *,
+                           unsigned char **out,
+                           apr_size_t *outlen,
+                           const unsigned char *in,
+                           apr_size_t inlen)
+{
+    return APR_ENOTIMPL;
+}
+
+apr_status_t apr_evp_crypt_finish(apr_evp_crypt_t *e,
+                                  unsigned char *out,
+                                  apr_size_t *outlen);
+{
+    return APR_ENOTIMPL;
+}
+
 #endif
+
