@@ -1,6 +1,11 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.3.0
-  
+
+  *) Expose the SSL EVP interface to encrypt and decrypt arbitrary
+     blocks of data, using symmetrical keys. Experimental support for
+     asymmetrical public/private keys as supported by OpenSSL v0.9.9.
+     [Graham Leggett]
+
   *) Introduce apr_dbd_open_ex() [Bojan Smojver]
 
   *) Make md5 hash files portable between EBCDIC and ASCII platforms  
